SyntacticAnalyzer/tests/fail/clase02.java
class class {
// uso de palabra reservada como identificador
}
